2000-04-17  Fred Kiefer <FredKiefer@gmx.de>
	* Edit/Controller.m: Removed RTF setting, now become window delegate
	* Edit/Edit.m: Added entries in menu for additional format test
	* Edit/Document.m: Enable RTF

2000-03-11  Adam Fedor  <fedor@gnu.org>

	* nsimage.m: Set window frame when initing window.

Wed Mar  8 21:42:03 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* TestView.m: Do not include configure.h.  Some other tidying, 
	removed some unuseful historical code.

2000-02-25  Adam Fedor  <fedor@gnu.org>

	* ColorView.m: Fix some retain problems.
	* nscursor.m: Show implementation of image cursor.

Tue Feb 22 18:19:11 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Contributed by Fred Kiefer: 
	* Edit/Controller.m ([Controller -applicationDidFinishLaunching:]): 
	Use the font manager.
	* Edit/Edit.m (createMenu): Create the format menu.
	
Tue Jan 25 15:02:41 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* fontpanel.m: Rewritten completely, based on a contribution 
	by Fred Kiefer.

Sun Feb 13 02:14:29 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Finger: New demo program.

Sun Feb 13 01:11:31 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* CurrencyConverter/CurrencyConverter.m ([-init]): Use AUTORELEASE
	instead of -autorelease.  ([-dealloc]): Use RELEASE instead of
	-release. (main): AUTORELEASE the created menus.
	* Calculator/main.m (main): AUTORELEASE the created menus.

Thu Feb 10 09:55:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* nsscroller.m: ([MyObject -scrollerAction:]) Move the knob when the
	arrows are clicked.

Thu Feb 10 01:29:48 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* nsscroller.m ([MyObject -scrollerAction:]): Print some 
	useful information.

Mon Feb  7 12:25:24 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* scrollview2.m ([-addColumn:]), ([-addRow:]): Mark the scrollview
	as needing redisplay. ([-removeRow:]), ([-removeColumn:]): Idem
	plus reset button titles.
