@@ -47,11 +47,13 @@
   image = [[NSImage alloc] initWithContentsOfFile: file_name];
   [image setBackgroundColor: [NSColor whiteColor]];
 
-  if (image)
-    NSLog(@"Loaded image %s\n", [file_name cString]);
-  else
-    NSLog(@"Failed to load image %s\n", [file_name cString]);
-
+  if (image == nil)
+    {
+      NSLog(@"Failed to load image %s\n", [file_name cString]);
+      RELEASE(self);
+      return nil;
+    }
+  NSLog(@"Loaded image %s\n", [file_name cString]);
   return self;
 }
 
